Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106404

Audio Example doesn't scale properly on android

XMLWordPrintable

    • Android, Windows
    • f9da051f4 (dev), 56bb8ad1a (6.5)
    • 2022wk50FOQtforAndroid, 2022wk52FOQtforAndroid, 2023wk04FOQtforAndroid, 2023wk06FOQtforAndroid, 2023wk08FOQtforAndroid, 2023wk10FOQtforAndroid, 2023wk12FOQtforAndroid, 2023wk14FOQtforAndroid

      Audio Example doesn't scale properly to fit android devices screen.

        For Gerrit Dashboard: QTBUG-106404
        # Subject Branch Project Status CR V

            nick_bennett Nicholas Bennett
            eliashautala Elias Hautala
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes